# ml-vehicle-silhouettes

./: README.md  project-description.md  pyproject.toml
notebooks/: 01-supervised.ipynb  02-unsupervised.ipynb
